# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "windmark"
version = "0.0.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "An elegant and highly performant async Gemini server framework"
documentation = "https://docs.rs/windmark"
readme = "README.md"
homepage = "https://github.com/gemrest/windmark"
repository = "https://github.com/gemrest/windmark"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["web-programming"]

[features]
logger = ["pretty_env_logger"]

[dependencies]
# TCP
openssl = "0.10.38"
tokio = { version = "0.2.4", features = ["full"] }
# tokio-openssl = "0.5.0"
# tokio-uds = "0.2.7"
tokio-openssl = "0.4.0"

# Logging
pretty_env_logger = { version = "0.4.0", optional = true }
log = "0.4.16"

# URL
url = "2.2.2"
regex = "1.5.5"
matchit = "0.5.0"

# MIME
tree_magic = "0.2.3"
