# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "windmark"
version = "0.3.2"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "An elegant and highly performant async Gemini server framework"
documentation = "https://docs.rs/windmark"
readme = "README.md"
homepage = "https://github.com/gemrest/windmark"
repository = "https://github.com/gemrest/windmark"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["web-programming"]

[features]
logger = ["pretty_env_logger"]
auto-deduce-mime = ["tree_magic"]
response-macros = []

[dependencies]
# SSL
openssl = "0.10.38"
tokio-openssl = "0.6.3"

# Non-blocking I/O
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.68"

# Logging
pretty_env_logger = { version = "0.4.0", optional = true }
log = "0.4.16"

# URL
url = "2.2.2"
regex = "1.5.5"
matchit = "0.6.0"

tree_magic = { version = "0.2.3", optional = true } # MIME

paste = "1.0.12" # Token Pasting
