# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rossweisse"]

[package]
name = "windmark"
version = "0.3.9"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "An elegant and highly performant async Gemini server framework"
documentation = "https://docs.rs/windmark"
readme = "README.md"
homepage = "https://github.com/gemrest/windmark"
repository = "https://github.com/gemrest/windmark"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["web-programming"]

[features]
default = ["tokio"]
logger = ["pretty_env_logger"]
auto-deduce-mime = ["tree_magic"]
response-macros = []
tokio = ["dep:tokio", "tokio-openssl"]
async-std = ["dep:async-std", "async-std-openssl"]
prelude = []

[dependencies]
# SSL
openssl = "0.10.38"
tokio-openssl = { version = "0.6.3", optional = true }
async-std-openssl = { version = "0.6.3", optional = true }

# Non-blocking I/O
tokio = { version = "1.26.0", default-features = false, features = ["rt-multi-thread", "sync", "net", "io-util", "macros"], optional = true }
async-trait = "0.1.68"
async-std = { version = "1.12.0", features = ["attributes"], optional = true }

# Logging
pretty_env_logger = { version = "0.5.0", optional = true }
log = "0.4.16"

# URL
url = "2.2.2"
matchit = "0.6.0"

tree_magic = { version = "0.2.3", optional = true } # MIME

paste = "1.0.12" # Token Pasting

[dev-dependencies]
rossweisse = { version = "0.0.2", path = "./rossweisse" }
