# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rossweisse"
version = "0.0.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26" # Quasi-quoting
syn = { version = "2.0.15", features = ["full"] } # Source Code Parsing
proc-macro2 = "1.0.56" # `proc-macro` Wrapper
