# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rossweisse"
version = "0.0.1"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "`struct`-based Router Framework for Windmark"
documentation = "https://docs.rs/rossweisse"
readme = "README.md"
repository = "https://github.com/gemrest/windmark"
license = "GPL-3.0-only"
keywords = ["gemini", "windmark"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26" # Quasi-quoting
syn = { version = "2.0.15", features = ["full"] } # Source Code Parsing
proc-macro2 = "1.0.56" # `proc-macro` Wrapper
